--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-dom": "^16.13.1",
     "react-elastic-carousel": "^0.6.6",
     "react-scripts": "3.4.1",
+    "react-scrollable-anchor": "^0.6.1",
     "reactstrap": "^8.5.1",
     "styled-components": "^5.1.1"
   },
